# clangir

clang/include/clang/CIR/: CIRToCIRPasses.h
clang/include/clang/CIR/Dialect/: Passes.h  Passes.td
clang/include/clang/CIR/Dialect/IR/: CIROps.td  (+2 more)
clang/include/clang/CIR/Interfaces/: ASTAttrInterfaces.td
clang/lib/CIR/CodeGen/: CIRGenBuilder.h  CIRGenModule.cpp  CIRGenTypes.cpp  CIRPasses.cpp
clang/lib/CIR/Dialect/IR/: CIRDialect.cpp  CIRTypes.cpp
clang/lib/CIR/Dialect/Transforms/: CMakeLists.txt  CallConvLowering.cpp
clang/lib/CIR/Dialect/Transforms/ABI/: ABIInfo.cpp  ABIInfo.h  ABIInfoImpl.cpp  ABIInfoImpl.h  CIRCXXABI.cpp  CIRCXXABI.h  CIRContext.cpp  CIRContext.h  CIRFunctionInfo.h  CIRRecordLayout.cpp  CIRRecordLayout.h  CIRToCIRArgMapping.h  CMakeLists.txt  DataLayout.cpp  DataLayout.h  ItaniumCXXABI.cpp  LowerFunction.cpp  LowerFunction.h  LoweringCall.h  LoweringFunctionInfo.h  LoweringModule.cpp  LoweringModule.h  LoweringTypes.cpp  LoweringTypes.h  MissingFeature.h  RecordLayoutBuilder.cpp  TargetInfo.h  TargetLoweringInfo.h  Test.h  X86.cpp
clang/lib/CIR/Dialect/Transforms/TargetLowering/: CIRCXXABI.h  CIRToCIRArgMapping.h  ItaniumCXXABI.cpp  LowerCall.cpp  LowerCall.h  LowerFunction.cpp  LowerFunction.h  LowerFunctionInfo.h  LowerModule.cpp  LowerModule.h  LowerTypes.cpp  LowerTypes.h  MissingFeature.h
clang/lib/CIR/Dialect/Transforms/TargetLowering/Targets/: X86.cpp
clang/lib/CIR/FrontendAction/: CIRGenAction.cpp
clang/test/CIR/CodeGen/: bitfields.cpp
clang/test/CIR/IR/: invalid.cir  vtableAttr.cir
clang/tools/cir-opt/: cir-opt.cpp
(+3 files in other folders)
